--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ charset-normalizer==3.3.2
 click==8.1.7
 decorator==5.1.1
 executing==2.0.1
-flask==2.3.3
+flask
 Flask-Cors==4.0.0
 flask-sqlalchemy==3.1.1
 greenlet==3.0.1
